versioned_docs/version-1.2/administration/gitcatalog.mdx
---
title: Git Catalog
description: Administrators can create a catalog of pre-defined development environments for developers to use.
sidebar_label: Git Catalog
id: gitcatalog
---

import Image from '@theme/Image';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';


The Git Catalog feature enables `admins` to pre-configure a list of repositories, from the Okteto web UI, that are made available to `developers` in the same Okteto instance when they launch a dev environment from the UI. By pre-configuring these catalog entries, a developer can shorten the time it takes to deploy a development environment. With Git Catalog, developers don’t need to worry about using the right Okteto manifest or configuring the necessary environment variables.

This feature gives more control to Okteto administrators over the developer experience and provides a more seamless workflow to help developers get started with their work.

## Create your git catalog

:::info

*Only accounts with the administrator role can use this feature.*

:::

Within the Okteto UI, navigate to the `Admin` page and select the `Catalog` tab. On this tab, click the `Add Repository` button to open the `Add Repository` form.

### Add a repository to the catalog

Completing this form adds an entry to your Git Catalog, which is basically a pre-defined repository configuration that enables a developer to one-click deploy a development environment using that repository and the definition you’ve provided for it.

Fill out as much of the form that makes sense for you. You will see:

- Name*
- Repository URL*
- [Default Branch](#define-a-default-branch)
- [Manifest Path](#define-a-manifest-path)
- [Environment Variables](#add-environment-variables)

Only the `Name` and `Repository URL` fields are required. When done, click `Save`.

<p align="center"><Image src="/docs/administration/images/gc_add_repo.png" alt="add a git catalog repository" width="1000" /></p>

### Define a Default Branch

The default branch you specify here will be the default branch used when a developer selects this Git Catalog item to deploy a development environment.

You can specify multiple catalog entries for the same `Repository URL` and set a different `Default Branch` for each one if your use case necessitates that.

### Define a Manifest Path

This field should (optionally) point to where your Okteto manifest resides. This provides additional control to provide a smoother experience for developers who deploy a development environment from the Git Catalog.

### Add Environment Variables

You can also (optionally) add Environment Variables to your Git Catalog entry to standardize how the development environment is deployed. Similar to the Default Branch entry, you could specify multiple catalog entries for the same Repository URL each with different Environment Variables.

<p align="center"><Image src="/docs/administration/images/gc_add_env_vars.png" alt="add environment variables to git catalog repo" width="1000" /></p>

## Launch a Dev Environment from your Git Catalog

Once you’ve defined your Git Catalog entries, you can navigate to `Namespaces` → `Launch Dev Environment` → `Catalog`.

In this tab you should see all of the repositories you’ve added (and pre-configured). Select an entry you wish to use and click `Launch`.

<p align="center"><Image src="/docs/administration/images/gc_launch_dev_env.png" alt="launch a git catalog development environment" width="1000" /></p>

<p align="center"><Image src="/docs/administration/images/gc_view_env_vars.png" alt="view a git catalog repo's environment variables" width="1000" /></p>